--- a/vue/Klinika-ui/package.json
+++ b/vue/Klinika-ui/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "form-wizard-vue3": "^1.1.0",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
