--- a/vue/Klinika-ui/package.json
+++ b/vue/Klinika-ui/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.4.0",
     "flowbite": "^1.6.5",
     "form-wizard-vue3": "^1.1.0",
+    "qalendar": "^2.5.0",
     "tw-elements": "^1.0.0-beta2",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
