--- a/vue/Klinika-ui/package.json
+++ b/vue/Klinika-ui/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@vuepic/vue-datepicker": "^5.2.0",
     "axios": "^1.4.0",
+    "chart.js": "^3.5.0",
     "flowbite": "^1.6.5",
     "form-wizard-vue3": "^1.1.0",
     "qalendar": "^2.5.0",
     "tw-elements": "^1.0.0-beta2",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vue3-charts": "^1.1.33"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
